--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -118,23 +118,23 @@ jobs:
         run: exec ./.github/scripts/delete-old-docker-tags.sh
 
       # Update docker repository description
-#      - name: Prepare Docker description
-#        if: ${{ inputs.pushImages }}
-#        run: |
-#          filename=docker.README.md
-#
-#          startLine=$(grep -n '## Usage' README.md | sed 's/[^00-9]*//g')
-#          startLine=$((startLine - 1))
-#          endLine=$(grep -n '## Project goal' README.md | sed 's/[^00-9]*//g')
-#
-#          head -n $startLine README.md > $filename
-#          tail -n +$endLine README.md >> $filename
-#      - name: Publish docker description
-#        if: ${{ inputs.pushImages }}
-#        uses: peter-evans/dockerhub-description@v3
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#          repository: noxone/mahjongpoints
-#          short-description: ${{ github.event.repository.description }}
-#          readme-filepath: ./docker.README.md
+      - name: Prepare Docker description
+        if: ${{ inputs.pushImages }}
+        run: |
+          filename=docker.README.md
+
+          startLine=$(grep -n '## Usage' README.md | sed 's/[^00-9]*//g')
+          startLine=$((startLine - 1))
+          endLine=$(grep -n '## Project goal' README.md | sed 's/[^00-9]*//g')
+
+          head -n $startLine README.md > $filename
+          tail -n +$endLine README.md >> $filename
+      - name: Publish docker description
+        if: ${{ inputs.pushImages }}
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: noxone/mahjongpoints
+          short-description: ${{ github.event.repository.description }}
+          readme-filepath: ./docker.README.md
