--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -48,6 +48,9 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Run Gradle tasks
         run: ./gradlew clean build
+      - name: Replace placeholders
+        run: |
+          sed -i 's/GIT_COMMIT_ID/$(git rev-parse HEAD)/' ./build/distributions/index.html
       - name: Cleanup Gradle Cache
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
         # Restoring these files from a GitHub Actions cache might cause problems for future builds.
