--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -50,7 +50,7 @@ jobs:
         run: ./gradlew clean build
       - name: Replace placeholders
         run: |
-          sed -i 's/GIT_COMMIT_ID/$(git rev-parse HEAD)/' ./build/distributions/index.html
+          sed "s/GIT_COMMIT_ID/$(git rev-parse HEAD)/" ./build/distributions/index.html > temp && mv temp ./build/distributions/index.html
       - name: Cleanup Gradle Cache
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
         # Restoring these files from a GitHub Actions cache might cause problems for future builds.
